Separate out sass and fix up header on mobile.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -3,57 +3,18 @@
 $title-font: "Trajan Pro", "Cinzel", serif;
 $font-family-base: "Adobe Garamond", "EB Garamond", "Garamond", serif;
 $font-family-monospace: "Source Code Pro", Monaco, monospace;
-
-
-// Our variables
-$base-line-height: 1.5;
-$base-font-weight: 400;
-
-$spacing-unit:     30px;
-
 $text-color:       #333;
 $background-color: #fdfdfd;
 $brand-color:      #88A9B8;
-
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    1020px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
 $theme-colors: (
   "primary": $brand-color,
   "secondary": #356E81
 );
-
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
-}
-
-$font-size-base:              1rem;
-$h1-font-size:                4.5rem;
+$font-size-base: 1rem;
 $card-columns-count: 4;
-
-.map {
-  height: 300px;
-}
-
-#logo {
-  height: $h1-font-size;
-}
 
 @import "./vendor/bootstrap/scss/functions";
 @import "./vendor/bootstrap/scss/variables";
@@ -72,10 +33,10 @@ $card-columns-count: 4;
 @import "./vendor/bootstrap/scss/transitions";
 @import "./vendor/bootstrap/scss/pagination";
 
-
-// Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
+        "index",
+        "map",
         "cultnbw",
         "sidebar",
         "carousel",
